--- a/.env
+++ b/.env
@@ -3,3 +3,21 @@ CLERK_SECRET_KEY=sk_test_oADAxBG7BBSWPLfeByGSxl4j5RQm3OFAiSsNbqwF8k
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+# took the postgre ip from neon database
+DATABASE_URL="postgresql://neondb_owner:fR6uxpUCsyJ1@ep-divine-dawn-a56m8bgx.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+
+# cloudinary
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME= dlrg9ss19
+NEXT_PUBLIC_CLOUDINARY_API_KEY= 611727927437624
+NEXT_PUBLIC_CLOUDINARY_API_SECRET= StP-FKYyw5bXvDdM3tsfrI-JVsM
