--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
+    "@prisma/client": "^5.18.0",
+    "axios": "^1.7.5",
+    "cloudinary": "^2.4.0",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.4",
+    "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-cloudinary": "^6.10.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.16.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
