--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Ym9zcy1hcmFjaG5pZC01My5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_oADAxBG7BBSWPLfeByGSxl4j5RQm3OFAiSsNbqwF8k
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
@@ -13,11 +13,11 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # took the postgre ip from neon database
-DATABASE_URL="postgresql://neondb_owner:fR6uxpUCsyJ1@ep-divine-dawn-a56m8bgx.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=
 
 
-# cloudinary data api
+# cloudinary
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME= dlrg9ss19
-NEXT_PUBLIC_CLOUDINARY_API_KEY= 611727927437624
-NEXT_PUBLIC_CLOUDINARY_API_SECRET= StP-FKYyw5bXvDdM3tsfrI-JVsM
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY= 
+NEXT_PUBLIC_CLOUDINARY_API_SECRET= 
